Bug 412331 - Background colors in Gimp and Inkscape do not match kde color scheme in plasma 5.17beta
Summary: Background colors in Gimp and Inkscape do not match kde color scheme in plasm...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: gtk theme (other bugs)
Version First Reported In: 5.17.90
Platform: openSUSE Linux
: VHI normal
Target Milestone: ---
Assignee: Janet Blackquill
URL:
Keywords:
: 414108 414590 418321 426084 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-09-25 19:09 UTC by Robby Engelmann
Modified: 2021-02-18 17:14 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.0
Sentry Crash Report:


Attachments
Screenshot showing the color inconsistencies (158.75 KB, image/png)
2019-09-25 19:19 UTC, Robby Engelmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2019-09-25 19:09:19 UTC
SUMMARY

I am using the Materia Manjaro Dark color scheme with greenish backgrounds, but the background colors (e.g. hover over menu entries, toolboxes) in Gtk applications like gimp and inkscape are breeze blue instead.
I am using the Breeze Dark plasma, gtk2 and gtk3 themes.

System: up to date openSUSE Tumbleweed with Frameworks 5.62, Plasma 5.17 beta, Qt 5.13.1
Comment 1 Robby Engelmann 2019-09-25 19:19:11 UTC
Created attachment 122870 [details]
Screenshot showing the color inconsistencies
Comment 2 Fabian Vogt 2019-09-28 11:15:17 UTC
Not sure whether it's for the same reason, but GIMP looks really bad OOTB now: https://openqa.opensuse.org/tests/1043465#step/gimp/23
Comment 3 Nate Graham 2019-10-07 00:45:58 UTC
GIMP and Inkscape use the ancient GTK2 toolkit, and the dynamic color changing feature was only implemented for GTK3. GTK2 has been deprecated for years, and both apps have GTK3 ports. FWIW there is a patch that would implement this: https://phabricator.kde.org/D24324
Comment 4 Nate Graham 2019-10-07 16:45:25 UTC
...And part two of the fix: https://phabricator.kde.org/D24471
Comment 5 Nate Graham 2019-11-28 04:22:54 UTC
*** Bug 413296 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2019-11-28 04:23:02 UTC
*** Bug 414590 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2019-11-28 04:24:09 UTC
*** Bug 414108 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2019-11-30 06:10:24 UTC
*** Bug 414590 has been marked as a duplicate of this bug. ***
Comment 9 Fabian Vogt 2020-02-01 14:24:20 UTC
GIMP still looks awful with Plasma 5.18 Beta: https://openqa.opensuse.org/tests/1159809#step/gimp/21
Comment 10 Nate Graham 2020-02-12 22:16:55 UTC
*** Bug 417463 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2020-02-20 18:10:17 UTC
There's a patch for this: https://phabricator.kde.org/D24375
Comment 12 Nate Graham 2020-04-07 14:24:46 UTC
https://phabricator.kde.org/D28658
Comment 13 Nate Graham 2020-04-14 18:52:34 UTC
*** Bug 420088 has been marked as a duplicate of this bug. ***
Comment 14 Nate Graham 2020-04-15 17:28:56 UTC
*** Bug 418321 has been marked as a duplicate of this bug. ***
Comment 15 Janet Blackquill 2020-04-17 15:45:24 UTC
Git commit 2fb0bf85fe63fa7ba7fc0af4e0bf7db6da8d5d40 by Carson Black.
Committed on 17/04/2020 at 15:45.
Pushed by cblack into branch 'master'.

[krdb] Drop GTK2 colour exporting

Summary:
With the vast supermajority of modern GTK2 themes using pixmaps, exporting colours
is only likely to result in breakage.
FIXED-IN: 5.19.0 (or should we consider this a bugfix and land it on the stable branch?)

Reviewers: #plasma, ngraham, gikari, davidedmundson

Reviewed By: #plasma, ngraham, davidedmundson

Subscribers: gikari, fvogt, ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28658

M  +3    -63   kcms/krdb/krdb.cpp

https://commits.kde.org/plasma-desktop/2fb0bf85fe63fa7ba7fc0af4e0bf7db6da8d5d40
Comment 16 Patrick Silva 2020-05-02 10:49:51 UTC
bug 417463 marked as duplicate is still reproducible.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Comment 17 Nate Graham 2020-05-02 22:35:34 UTC
Mush be a separate issue then.
Comment 18 Nate Graham 2020-09-08 21:11:09 UTC
*** Bug 426084 has been marked as a duplicate of this bug. ***
Comment 19 Jim Jones 2020-09-08 21:16:02 UTC
But it was working before I updated to kde-frameworks-5.73 and kde-plasma-5.19.5