[krdb] Drop GTK2 colour exporting

Summary:
With the vast supermajority of modern GTK2 themes using pixmaps, exporting colours
is only likely to result in breakage.

BUG: 412331
FIXED-IN: 5.19.0 (or should we consider this a bugfix and land it on the stable branch?)

Reviewers: #plasma, ngraham, gikari, davidedmundson

Reviewed By: #plasma, ngraham, davidedmundson

Subscribers: gikari, fvogt, ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28658